# aoc2022

./: .gitignore  README.md  pyproject.toml
01/: README.md  calories.py
02/: README.md  rps.py
03/: README.md  rucksack.py
04/: README.md  cleanup.py
05/: README.md  supply.py
06/: README.md  comms.py
07/: README.md  filesystem.py
08/: README.md  trees.py
09/: README.md  rope.py
10/: README.md  cpu.py
11/: README.md  monkeys.py
12/: README.md  heightmaze.py
